# Forecast_J.Troncoso

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
data/processed/: generation_historic_tipo.csv
data/processed/plants/: 2020-10_plants.csv  2020-11_plants.csv  2020-12_plants.csv  2020-1_plants.csv  2020-2_plants.csv  2020-3_plants.csv  2020-4_plants.csv  2020-5_plants.csv  2020-6_plants.csv  2020-7_plants.csv  2020-8_plants.csv  2020-9_plants.csv  2021-10_plants.csv  2021-11_plants.csv  2021-12_plants.csv  2021-1_plants.csv  2021-2_plants.csv  2021-3_plants.csv  2021-4_plants.csv  2021-5_plants.csv  2021-6_plants.csv  2021-7_plants.csv  2021-8_plants.csv  2021-9_plants.csv  2022-10_plants.csv  2022-11_plants.csv  2022-12_plants.csv  2022-1_plants.csv  2022-2_plants.csv  2022-3_plants.csv  2022-4_plants.csv  2022-5_plants.csv  2022-6_plants.csv  2022-7_plants.csv  2022-8_plants.csv  2022-9_plants.csv  2023-10_plants.csv  2023-11_plants.csv  2023-12_plants.csv  2023-1_plants.csv  (+24 more)
data/processed/public_data/: generation_historic_subtipo_2.csv  generation_tipo_formatted.csv  hourly_demand.csv
models/: eolica_mstl.pkl  solar_mstl.pkl
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_evaluation.ipynb  comparasion_update_dataset_2024.csv  comparasion_update_dataset_historic.csv
scripts/: data_integrity.py  data_wrangling.py  plots.py  plots_extra.py
src/: __init__.py  _util.py  app.py  decomposer.py  forecast.py  logging_config.py  modeling.py  preprocessor.py  scenarios.py
src/data/: preprocessor.py
src/decomposition/: __init__.py  base.py  decompositor.py
src/pages/: 0_home.py  1_preprocessor.py  2_decomposer.py  3_helper_functions.py  3_scenario.py  4_model.py  5_forecast.py  9_documentation.py
src/preprocessing/: __init__.py  preprocessor.py
src/scenarios/: __init__.py  scenarios.py
src/visualization/: __init__.py  plots.py
